index.css
select {
  background-color: white;
}

.name img {
  max-height: 41px;
  vertical-align: top;
}

@media only screen and (min-width: 40em) {
  .top-bar {
    height: 95px;
  }

  .top-bar-section li a {
    line-height: 95px !important;
  }

  .name img {
    margin-top: 10px !important;
    max-height: 75px;
    max-width: 200px;
  }
}

.table {
  width: 100%;
}

.errorMessage {
  background-color: red;
  color: white;
  padding-left: 10px;
}

#commentsToggle {
  position: relative;
  top: 0px;
  left: 0px;
}

#commentsDetail {
  display: none;
  top: -10px;
  left: 15px;
  padding-top: 0px;
  vertical-align: middle;
  text-align: left;
  width: 400px;
  background-color: #ccc;
  color: black;
  border-radius: 5px;
  position: absolute;
}

#commentsDetail td {
  width: 400px;
  list-style-type: none;
}

#commentsToggle:hover #commentsDetail {
  display: inline-block;
}

#confirmDelete, #deleteBeneficiaireDetail, #deleteDataButton {
  background-color: red;
  color: white;
}

.editor {
  max-height: 500px;
  height: 500px;
  background-color: white;
  border-collapse: separate;
  border: 1px solid rgb(204, 204, 204);
  padding: 4px;
  box-sizing: content-box;
  -webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
  box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
  overflow: scroll;
  outline: none;
  resize: none;
}

.clickable {
  cursor: pointer;
}

#currentBeneficiaireDescription {
  height: 88px;
}

.isExcluded {
  color:red;
  font-weight: bold;
}

